--- a/chapter8.tex
+++ b/chapter8.tex
@@ -16,9 +16,9 @@ En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactor
   \label{fig:arquitectura-sistema}
 \end{figure}
 
-A su vez, desde la perspectiva del cumplimiento de los objetivos secundarios, se ha buscado de la maximización de la rentabilidad mediante la optimización de las posiciones del mercado, junto con la minimización del desgaste de las baterías, ciclándolas de forma estable y controlada a través de la lógica de negocio de la modelización. Además, se han cumplido con los requisitos regulatorios, principalmente definidos por el operador del sistema en forma de límites técnicos, evitando así posibles penalizaciones económicas. Se ha garantizado la seguridad de la operación desplegando parte de la integración con la infraestructura física en una \gls{idmz}, evitando la exposición de la información de los activos energéticos a redes no autorizadas. También, el diseño mantiene una arquitectura generalizada, siendo capaz de operar en múltiples instalaciones sin modificación alguna de la lógica del sistema. Se han dado facilidades a los agentes de mercado y operadores de telecontrol para la monitorización del sistema y se ha tenido en cuenta la respuesta automática ante fallos, como la falta de disponibilidad. Finalmente, se ha efectuado un análisis de viabilidad económica donde se muestran resultados medibles.
+A su vez, desde la perspectiva del cumplimiento de los objetivos secundarios, se ha buscado de la maximización de la rentabilidad mediante la optimización de las posiciones del mercado, junto con la consideración del desgaste de las baterías, ciclándolas de forma estable y controlada a través de la lógica de negocio de la modelización. Además, se han cumplido con los requisitos regulatorios, principalmente definidos por el operador del sistema en forma de límites técnicos, evitando así posibles penalizaciones económicas. Se ha garantizado la seguridad de la operación desplegando parte de la integración con la infraestructura física en una \gls{idmz}, evitando la exposición de la información de los activos energéticos a redes no autorizadas. También, el diseño mantiene una arquitectura generalizada, siendo capaz de operar en múltiples instalaciones sin modificación alguna de la lógica del sistema. Se han dado facilidades a los agentes de mercado y operadores de telecontrol para la monitorización del sistema y se ha tenido en cuenta la respuesta automática ante fallos, como la falta de disponibilidad. Finalmente, se ha efectuado un análisis de viabilidad económica donde se muestran resultados medibles.
 
-Por otro lado, según el punto de vista de la arquitectura, después de analizar las configuraciones topológicas con las que trabaja el sistema, se ha unificado e implantado la nueva infraestructura operacional para tanto la adquisición de datos de los \glspl{bess} como el control de la carga y descarga de la misma, con el resto de componentes ya existentes de la red. Concretamente, se ha hecho uso de protocolos de comunicación industriales para intercambiar información con los activos energéticos e introducir la integración de las baterías con el \gls{pis}, que realiza la labor de historiador guardando los estados de las señales físicas a lo largo del tiempo para su posterior consulta. Con ello, se ha configurado la política de obtención de datos mediante mecanismos espontáneos y de \gls{gi} y se ha facilitado su lectura.
+Por otro lado, según el punto de vista de la arquitectura, después de analizar las configuraciones topológicas con las que trabaja el sistema, se ha unificado e implantado la nueva infraestructura operacional para tanto la adquisición de datos de los \glspl{bess} como el control de la carga y descarga de la misma, con el resto de componentes ya existentes de la red. Concretamente, se ha hecho uso de protocolos de comunicación industriales para intercambiar información con los activos energéticos e introducir la integración de las baterías con el \gls{pis}, que realiza la labor de historiador guardando los estados de las señales físicas a lo largo del tiempo para su posterior consulta. Con ello, se ha configurado la política de obtención de datos mediante mecanismos espontáneos y de \gls{gi} y se ha facilitado su lectura. De esta forma, se dibuja una paralela con las conocidas fases de un projecto de \gls{iiot}, sensorización, procesamiento, gestión y actuación.
 
 Junto a esto, se ha obtenido la información del entorno de mercado a través de las interfaces proporcionadas por las instituciones oficiales correspondientes, el \gls{mo} y el \gls{tso}. La información se ha procesado y transformado en el formato adecuado para su almacenamiento masivo en base de datos, la cual ha tenido que ser consultada eficientemente. Para ello, se ha hecho uso de procesos periódicos temporizados según los programas de mercado.
 
