--- a/principal.tex
+++ b/principal.tex
@@ -50,12 +50,6 @@
 
 \begin{document}
 
-\section*{Todo}
-\begin{enumerate}
-  \item Revisar apartado 5 (Acrónimos LP MILP)
-  \item Completar figuras (¿diagrama por apartado principal?) (2 días)
-\end{enumerate}
-
 \setcounter{page}{-1}
 
 \input{title.tex}
@@ -90,7 +84,7 @@
 % \input{chapter4.tex}
 \input{chapter5.tex}
 % \input{chapter6.tex}
-% \input{chapter7.tex}
+\input{chapter7.tex}
 % \input{chapter8.tex}
 
 \nocite{*}
