--- a/references.bib
+++ b/references.bib
@@ -34,6 +34,13 @@
   organization = {IET}
 }
 
+@misc{bnef2025strategic,
+  title  = {BNEF - strategic research provider for the energy transition},
+  author = {BloombergNEF},
+  url    = {https://about.bnef.com/},
+  year   = {2025},
+}
+
 @inproceedings{bresciani2025hybridization,
   title        = {Hybridization of Variable Renewable Energy Sources with Battery Energy Storage Systems: Opportunities, Modelling and Case Study in Spain},
   author       = {Bresciani, Federico and Mandelli, Stefano},
@@ -110,7 +117,7 @@
   author = {DEUTZ Australia},
   year   = {2025},
   url    = {https://www.deutz.com.au/resources/what-is-a-battery-energy-storage-system-bess/},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{dong2021strategic,
@@ -123,12 +130,20 @@
   publisher = {Elsevier}
 }
 
+@misc{ecoavant2025precio,
+  title  = {El precio de la luz marca un nuevo máximo histórico todo y la excepción ibérica},
+  author = {EcoAvant},
+  url    = {https://www.ecoavant.com/consumo/precio-luz-marca-nuevo-maximo-historico-todo-excepcion-iberica_9229_102.html},
+  year   = {2022},
+  note   = {Accessed: 2025-09-05}
+}
+
 @misc{enspired2025battery,
   title  = {Battery Energy Storage Solutions for Maximum ROI},
   author = {Enspired Trading},
   url    = {https://www.enspired-trading.com/bess},
   year   = 2025,
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{entelios2025cross,
@@ -136,6 +151,14 @@
   author = {Entelios},
   url    = {https://www.entelios.de/cross-market-optimierung/},
   year   = 2025,
+  note   = {Accedido: 2025-09-05}
+}
+
+@misc{gadvisory2025technical,
+  title  = {Technical and economic study of two energy storage technologies in Spain},
+  author = {G-Advisory},
+  url    = {https://www.asealen.es/wp-content/uploads/2023/02/20230217-Conclusions-Technical-and-economic-study-of-two-energy-storage-technologies-in-Spain_G-advisory-Simulyde.pdf},
+  year   = {2023},
   note   = {Accessed: 2025-09-05}
 }
 
@@ -240,7 +263,7 @@
   author = {Iberdrola},
   url    = {https://www.iberdrola.com/conocenos/nuestra-actividad/almacenamiento-energia/bess},
   year   = {2024},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @manual{iec2016telecontrol,
@@ -255,7 +278,7 @@
   author = {Ikerlan},
   url    = {https://baic.eus/ikerlan-ia4bat-optimizacion-e-inteligencia-artificial-para-la-operacion-de-baterias-de-segunda-vida-en-tiempo-real/},
   year   = 2025,
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{ingeteam2022ingeteam,
@@ -263,7 +286,7 @@
   author = {Ingeteam},
   url    = {https://www.ingeteam.com/SaladePrensa/Noticias/tabid/226/articleType/ArticleView/articleId/3390/Ingeteam-suministra-un-sistema-de-baterias-y-su-electronica-de-potencia-para-la-mayor-planta-de-hidrogeno-verde-de-Europa.aspx},
   year   = {2022},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{ingeteam2025ingeteam,
@@ -279,7 +302,7 @@
   author = {International Renewable Energy Agency},
   url    = {https://www.irena.org/costs},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @inproceedings{kalenderova2024batery,
@@ -332,6 +355,14 @@
   title  = {Cost models for battery energy storage systems},
   author = {Larsson, Patrik and Börjesson, Philip},
   year   = {2018}
+}
+
+@misc{leal2025case,
+  title  = {The case for cross-market optimization: Trading BESS on a moving horizon},
+  author = {Pedro Iván Leal Jáuregui},
+  url    = {https://dexterenergy.ai/news/bess-trading-the-case-for-cross-market-optimization/},
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
 }
 
 @article{liu2022milp,
@@ -393,6 +424,13 @@
   url    = {https://www.boe.es/eli/es/o/2024/12/26/ted1487},
   year   = {2024},
   note   = {Accedido: 2025-09-05}
+}
+
+@misc{national2025nrel,
+  title  = {National Renewable Energy Laboratory - leading innovation in renewable energy systems},
+  author = {National Renewable Energy Laboratory},
+  url    = {https://www.nrel.gov/},
+  year   = {2025},
 }
 
 @misc{omie2025acceso,
@@ -472,7 +510,7 @@
   author = {Red Eléctrica de España},
   url    = {https://www.esios.ree.es/es/unidades-fisicas},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{shamarova2022review,
@@ -484,6 +522,14 @@
   pages     = {6967},
   year      = {2022},
   publisher = {MDPI}
+}
+
+@misc{solfy2025subvenciones,
+  title  = {Subvenciones para baterías solares 2025},
+  author = {Solfy},
+  url    = {https://solfy.net/autoconsumo/subvenciones/baterias-solares/},
+  year   = {2025},
+  note   = {Accedido: 2025-09-05}
 }
 
 @mastersthesis{spiller2020aging,
@@ -516,7 +562,7 @@
   author = {Sympower},
   url    = {https://sympower.net/battery-solutions},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{talend2025modern,
@@ -524,7 +570,7 @@
   author = {Talend},
   url    = {https://www.talend.com/},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{tejada2019review,
@@ -559,7 +605,7 @@
   author = {Jorge Villagrasa},
   url    = {https://edem.eu/como-se-fija-el-precio-de-la-electricidad-en-espana-para-dummies/},
   year   = 2023,
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{williams1994purdue,
